Compliance reports docs for 2.4

--- a/_data/master/navbars/security.yml
+++ b/_data/master/navbars/security.yml
@@ -114,3 +114,5 @@ toc:
       path: /security/intrusion-detection/customizing
   - title: Trace and block suspicious IPs
     path: /security/suspicious-IPs 
+- title: Tigera Secure EE compliance reports
+  path: /security/compliance-reports
