--- a/_data/v2_4/navbars/security.yml
+++ b/_data/v2_4/navbars/security.yml
@@ -114,3 +114,5 @@ toc:
       path: /security/intrusion-detection/customizing
   - title: Trace and block suspicious IPs
     path: /security/suspicious-IPs 
+- title: Tigera Secure EE compliance reports
+  path: /security/compliance-reports
