--- a/_includes/v2.3/manifests/calico-typha.yaml
+++ b/_includes/v2.3/manifests/calico-typha.yaml
@@ -1,5 +1,5 @@
 {% comment %}
-{{ typha_service_name }}.yaml acccepts the following include flags:
+calico-typha.yaml acccepts the following include flags:
 
 | Name         | Accepted Values               |
 |--------------|-------------------------------|
