Removed changes from v2.3

--- a/_includes/v2.3/manifests/calico-config.yaml
+++ b/_includes/v2.3/manifests/calico-config.yaml
@@ -31,7 +31,7 @@ data:
 {%- endif %}
 {%- if include.typha == "true" %}
   # You must set a non-zero value for Typha replicas below.
-  typha_service_name: "{{ typha_service_name }}"
+  typha_service_name: "calico-typha"
 {%- else %}
   # Typha is disabled.
   typha_service_name: "none"
