--- a/_includes/v2.3/manifests/rbac.yaml
+++ b/_includes/v2.3/manifests/rbac.yaml
@@ -60,7 +60,7 @@ subjects:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: {{ role_name }}
+  name: calico-node
 rules:
   # The CNI plugin needs to get pods, nodes, and namespaces.
   - apiGroups: [""]
@@ -181,14 +181,14 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ role_name }}
+  name: calico-node
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ role_name }}
+  name: calico-node
 subjects:
 - kind: ServiceAccount
-  name: {{ role_name }}
+  name: calico-node
   namespace: kube-system
 ---
 {%- if include.network == "flannel" %}
