--- a/outputs/out-es-tsee-audit.conf
+++ b/outputs/out-es-tsee-audit.conf
@@ -8,6 +8,8 @@
     ca_file /etc/fluentd/elastic/ca.pem
     ssl_verify "#{ENV['ELASTIC_SSL_VERIFY']}"
     index_name "tigera_secure_ee_audit_ee.#{ENV['ELASTIC_INDEX_SUFFIX']}.%Y%m%d"
+    template_file /fluentd/etc/elastic_mapping_audits.template
+    template_name tigera_secure_ee_audit
     <buffer tag, time>
       timekey 1d
       flush_mode interval
