--- a/test/basic-binding.yaml
+++ b/test/basic-binding.yaml
@@ -66,3 +66,17 @@ roleRef:
   kind: ClusterRole
   name: tigera-elasticsearch-access-all
   apiGroup: rbac.authorization.k8s.io
+---
+
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: tigera-access-path-to-something-for-basicusernonresourceurl
+subjects:
+- kind: User
+  name: basicusernonresourceurl
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: ClusterRole
+  name: tigera-path-to-something
+  apiGroup: rbac.authorization.k8s.io
