Rev AAPIS pin and work to new libcalico-go interface

--- a/report-types/default/policy-audit.yaml
+++ b/report-types/default/policy-audit.yaml
@@ -13,5 +13,5 @@ spec:
     - name: events.yaml
   auditEventsSelection:
     resources:
-      - kind: 'GlobalNetworkPolicy'
-      - kind: 'NetworkPolicy'
+      - resource: 'globalnetworkpolicies'
+      - resource: 'networkpolicies'
