Scaleloader: Populate ObjectRef in events
plus typo fix in namespace playbook label churn

--- a/mockdata/scaleloader/playbooks/namespace-in-out/scaled/ingress-any-ns/04-label-churn-2.yaml
+++ b/mockdata/scaleloader/playbooks/namespace-in-out/scaled/ingress-any-ns/04-label-churn-2.yaml
@@ -2,7 +2,7 @@ action: update
 kind: "Pod"
 apiVersion: v1
 metadata:
-  name: "ingress-from-any-an-{{.ScaleId}}"
+  name: "ingress-from-any-ns-{{.ScaleId}}"
   namespace: "{{.Namespace}}"
   labels:
     "ingress-from-any-ns": "yes"
