Add make backport_docs_change target to backport a docs change to a previous version (#1110)

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ _output/
 /*.out
 bin
 vendor
+backport*.patch
 
 # This prevents us from accidentally checking actual files into
 # the helm templates directory, since (for now) we should be
