--- a/_includes/v2.4/charts/tigera-secure-ee/templates/compliance/compliance-controller.yaml
+++ b/_includes/v2.4/charts/tigera-secure-ee/templates/compliance/compliance-controller.yaml
@@ -111,6 +111,16 @@ spec:
           env:
             - name: LOG_LEVEL
               value: "warning"
+            # This environment is used to configure how many failed jobs are maintained before the controller starts
+            # deleting them. Persisting failed jobs gives the operator an opportunity to examine the associated pod
+            # logs to determine the cause of the failure. Only one job is created by the controller for each scheduled
+            # report.
+            - name: TIGERA_COMPLIANCE_MAX_FAILED_JOBS_HISTORY
+              value: "3"
+            # This environment is used to configure how many times a job to generate a specific scheduled report will
+            # retry in the event of a failure.
+            - name: TIGERA_COMPLIANCE_MAX_JOB_RETRIES
+              value: "6"
             # This environment is used to set the delay between the end time of the report and the start time
             # of the job used to generate the report. This does not affect the actual times that the report
             # covers. Defaults to 30m.
