Fix env var name for intrusion-detection-controller
Signed-off-by: Spike Curtis <spike@tigera.io>

--- a/_includes/master/charts/tigera-secure-ee/templates/monitor-calico.yaml
+++ b/_includes/master/charts/tigera-secure-ee/templates/monitor-calico.yaml
@@ -1006,7 +1006,7 @@ spec:
               secretKeyRef:
                 name: elastic-ee-intrusion-detection
                 key: password
-          - name: CA_CERT
+          - name: ELASTIC_CA
             value: /certs/ca.pem
         volumeMounts:
           - name: certs
