--- a/_data/master/navbars/security.yml
+++ b/_data/master/navbars/security.yml
@@ -98,21 +98,21 @@ toc:
     path: /security/configuration/prometheus
   - title: Configuring Alertmanager
     path: /security/configuration/alertmanager
-- title: Intrusion detection and prevention
+- title: Threat detection and prevention
   section:
   - title: Anomaly detection
     section:
     - title: Overview
-      path: /security/intrusion-detection/
-    - title: Enabling intrusion detection
-      path: /security/intrusion-detection/enabling
+      path: /security/threat-detection-and-prevention/anomaly-detection/
+    - title: Enabling anomaly detection
+      path: /security/threat-detection-and-prevention/anomaly-detection/enabling
     - title: Viewing anomalies
-      path: /security/intrusion-detection/viewing-anomalies
+      path: /security/threat-detection-and-prevention/anomaly-detection/viewing-anomalies
     - title: Job descriptions
-      path: /security/intrusion-detection/job-descriptions
+      path: /security/threat-detection-and-prevention/anomaly-detection/job-descriptions
     - title: Customizing
-      path: /security/intrusion-detection/customizing
+      path: /security/threat-detection-and-prevention/anomaly-detection/customizing
   - title: Trace and block suspicious IPs
-    path: /security/suspicious-IPs 
+    path: /security/threat-detection-and-prevention/suspicious-IPs 
 - title: Tigera Secure EE compliance reports
   path: /security/compliance-reports
