--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/crds-only.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/crds-only.yaml
@@ -1,6 +1,6 @@
 ---
 layout: null
 ---
-{% helm --execute templates/kdd-crds.yaml --execute templates/ee-specific-kdd-crds.yaml %}
+{% helm --execute templates/kdd-crds.yaml --execute templates/ee-specific-kdd-crds.yaml --execute templates/rbac.yaml %}
 network: calico
 {% endhelm %}
