--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/1.7/crds-only.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/1.7/crds-only.yaml
@@ -1,4 +1,5 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/kdd-crds.yaml  platform="gke" %}
+{% include {{page.version}}/manifests/kdd-crds.yaml %}
+{% include {{page.version}}/manifests/rbac.yaml platform="gke" %}
