Add missing liveness host

--- a/_includes/master/charts/tigera-secure-ee/templates/compliance/compliance-controller.yaml
+++ b/_includes/master/charts/tigera-secure-ee/templates/compliance/compliance-controller.yaml
@@ -178,6 +178,7 @@ spec:
             httpGet:
               path: /liveness
               port: 9099
+              host: localhost
       volumes:
         - name: elastic-ca-cert-volume
           secret:
