--- a/install/config.yaml
+++ b/install/config.yaml
@@ -1,4 +1,19 @@
 elasticsearch:
+  - ["DELETE", "_xpack/ml/datafeeds/datafeed-port_scan_pods", ""]
+  - ["DELETE", "_xpack/ml/datafeeds/datafeed-ip_sweep_pods", ""]
+  - ["DELETE", "_xpack/ml/datafeeds/datafeed-port_scan_external", ""]
+  - ["DELETE", "_xpack/ml/datafeeds/datafeed-ip_sweep_external", ""]
+  - ["DELETE", "_xpack/ml/datafeeds/datafeed-inbound_connection_spike", ""]
+  - ["DELETE", "_xpack/ml/datafeeds/datafeed-service_bytes_anomaly", ""]
+  - ["DELETE", "_xpack/ml/datafeeds/datafeed-pod_outlier_ip_activity", ""]
+  - ["DELETE", "_xpack/ml/anomaly_detectors/port_scan_pods", ""]
+  - ["DELETE", "_xpack/ml/anomaly_detectors/ip_sweep_pods", ""]
+  - ["DELETE", "_xpack/ml/anomaly_detectors/port_scan_external", ""]
+  - ["DELETE", "_xpack/ml/anomaly_detectors/ip_sweep_external", ""]
+  - ["DELETE", "_xpack/ml/anomaly_detectors/inbound_connection_spike", ""]
+  - ["DELETE", "_xpack/ml/anomaly_detectors/service_bytes_anomaly", ""]
+  - ["DELETE", "_xpack/ml/anomaly_detectors/pod_outlier_ip_activity", ""]
+  
   - ["PUT", "_xpack/ml/anomaly_detectors/port_scan_pods", "./data/port-scan-pods-job.json"]
   - ["PUT", "_xpack/ml/datafeeds/datafeed-port_scan_pods", "./data/port-scan-pods-datafeed.json"]
   - ["PUT", "_xpack/ml/anomaly_detectors/ip_sweep_pods", "./data/ip-sweep-pods-job.json"]
