Upgrade procedure deletes and re-creates tigera-es-installer
Signed-off-by: Spike Curtis <spike@tigera.io>

--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/monitor-calico-upgrade.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/monitor-calico-upgrade.yaml
@@ -4,5 +4,5 @@ layout: null
 {% helm tigera-secure-ee secure-es --execute templates/monitor-calico.yaml %}
 createCustomResources: false
 elasticTseeInstaller:
-  enable: false
+  enable: true
 {% endhelm %}
