--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/1.7/crds-only.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/1.7/crds-only.yaml
@@ -1,7 +1,7 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/kdd-crds.yaml %}
-{% include {{page.version}}/manifests/rbac.yaml platform="gke" %}
-{% include {{page.version}}/manifests/cluster-role.yaml %}
-{% include {{page.version}}/manifests/cluster-role.yaml osType="windows" %}
+{% helm --execute templates/kdd-crds.yaml --execute templates/rbac.yaml --execute templates/cluster-role.yaml %}
+platform: gke
+osType: windows
+{% endhelm %}
