--- a/v2.4/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/1.7/crds-only.yaml
+++ b/v2.4/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/1.7/crds-only.yaml
@@ -1,6 +1,6 @@
 ---
 layout: null
 ---
-{% helm --execute templates/kdd-crds.yaml %}
+{% helm --execute templates/kdd-crds.yaml --execute templates/ee-specific-kdd-crds.yaml %}
 platform: gke
 {% endhelm %}
